# quadrivio

./: README.md
quadrivio/: CMakeLists.txt  ControlScheme.txt  README  package.xml
quadrivio/bags/: crash.bag
quadrivio/config/: 99-usb-serial.rules  auto.yaml  core.yaml  roamros-config.yaml  rviz.rviz
quadrivio/config/cameras/: 02-2161A-06031.txt  02-2161A-06032.txt
quadrivio/launch/: auto.launch  core.launch  full.launch  offline.launch  planner.launch  roamros.launch  sensors.launch  simSensors.launch  tf-tree.launch  trajectoryControl.launch
quadrivio/launch/sensors/: sicklms291.launch  stereo_cameras.launch  stereo_image_view.launch  stereo_odometry.launch  trimbleGPS.launch
quadrivio/simulation/: quadrivioLight.ttt
quadrivio/src/PLCclient/: CMakeLists.txt  CharCircularBuffer.cpp  CharCircularBuffer.h  MsgFromQuad.cpp  MsgFromQuad.h  MsgToQuad.cpp  MsgToQuad.h  PLCclient.cpp  SerialCommunication.cpp  SerialCommunication.h  StringUtils.cpp  StringUtils.h  odometry_ts_monitor.py  tcp_ip_client.cpp  tcp_ip_client.h
quadrivio/src/dcled/: CMakeLists.txt  dcled.cpp
quadrivio/src/fastPredictor/: CMakeLists.txt  Interpolator.cpp  Interpolator.h  Kinematic.h  fastPredictor.cpp  poseShower.cpp
quadrivio/src/joypad/: CMakeLists.txt  joypad_translate.cpp
quadrivio/src/roamfree_python/: callbacks.py  initialPose.py  roamfree.py  roamfreeFromBag.py  utils.py
quadrivio/src/roamros/: initialPose-roamros.py
quadrivio/src/simulatedSensor/: CMakeLists.txt  clock.cpp  realPose.cpp  simulatedGPS.cpp  simulatedImu.cpp  simulatedInputs.cpp  simulatedMagnetometer.cpp
quadrivio/src/stateShower/: CMakeLists.txt  stateShower.cpp
quadrivio/src/trajectoryControl/: CMakeLists.txt  TrajectoryControl.cpp  TrajectoryControl.h  main.cpp  sendSimplePath.py
quadrivio/src/trajectoryGenerator/: CMakeLists.txt  commands  commandsComplex  commandsOtto  commandsRect  commandssinu  sinu30  sinu30_10  sinu45  sinu90  trajectoryGenerator.cpp
quadrivio/src/trajectoryPlanner/: 02_secondMap.yaml  CMakeLists.txt  DTM1450_01.yaml  README  mapWithTrees.yaml  planConf.yaml  testPlanner.rviz  trajectoryPlanner.cpp
quadrivio/src/trajectoryRecorder/: CMakeLists.txt  trajectoryRecorder.cpp
quadrivio/src/utilities/: CMakeLists.txt  joy_emu.cpp  pathDisplay.cpp
quadrivio_msgs/: CMakeLists.txt  package.xml
quadrivio_msgs/msg/: ControllerInternal.msg  PLCRawValues.msg  PathWithVelocity.msg  QuadOdometry.msg  SetPoint.msg  dcled.msg
