<?xml version="1.0"?>
<package>
  <name>quadrivio_msgs</name>
  <version>0.0.0</version>
  <description>quadrivio_msgs provides definitions of messages used by the quadrivio robot</description>
  <maintainer email="martino.migliavacca@polimi.it">Martino Migliavacca</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
